--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Freddine
-logo: assets/images/profile.png.jpeg
+logo: assets/images/profile.png
 show_downloads: True
 remote_theme: pages-themes/cayman@v0.2.0
 plugins:
